<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@mipmap/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="25dp"
            android:src="@mipmap/back"
            android:layout_centerVertical="true"
            android:background="@drawable/press"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music_title"
            android:textColor="@color/color_99b4a1"
            android:textSize="@dimen/big_font"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/music1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/musiccontent1"
                    android:lineSpacingExtra="8dp"
                    android:textColor="@color/color_722e3e"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/music2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/musiccontent2"
                    android:lineSpacingExtra="8dp"
                    android:textColor="@color/color_722e3e"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/music3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/musiccontent3"
                    android:lineSpacingExtra="8dp"
                    android:textColor="@color/color_722e3e"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/music4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/musiccontent4"
                    android:lineSpacingExtra="8dp"
                    android:textColor="@color/color_722e3e"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/music5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/musiccontent5"
                    android:lineSpacingExtra="8dp"
                    android:textColor="@color/color_722e3e"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/music6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/musiccontent6"
                    android:lineSpacingExtra="8dp"
                    android:textColor="@color/color_722e3e"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/music7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/musiccontent7"
                    android:lineSpacingExtra="8dp"
                    android:textColor="@color/color_722e3e"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
