<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/color_99b4a1"
            android:textSize="@dimen/max_font"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/jj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jj"
                android:background="@drawable/press"/>

            <ImageView
                android:id="@+id/jqg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jqg"
                android:layout_marginLeft="5dp"
                android:background="@drawable/press"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/top"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/jqys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jqys"
                android:background="@drawable/press"/>

            <ImageView
                android:id="@+id/jq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/jq"
                android:layout_marginLeft="5dp"
                android:background="@drawable/press"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banquan"
            android:textColor="@color/color_99b4a1"
            android:layout_marginBottom="10dp"
            android:background="@drawable/press"/>

        <TextView
            android:id="@+id/statement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shenming"
            android:layout_marginLeft="5dp"
            android:textColor="@color/color_99b4a1"
            android:background="@drawable/press"/>
    </LinearLayout>
</RelativeLayout>
